--- a/pack.yml
+++ b/pack.yml
@@ -7,6 +7,8 @@ addons:
   chunk-generator-noise-3d: 0.1.+
   config-noise-function: 0.1.+
   palette-block-shortcut: 0.1.+
+  biome-provider-single: 0.1.+
+
 
 generator: NOISE_3D
 
