--- a/pack.yml
+++ b/pack.yml
@@ -3,11 +3,26 @@ author: Sancires
 version: alpha-1.0.0
 
 addons:
-  language-yaml: 0.1.+
-  chunk-generator-noise-3d: 0.1.+
-  config-noise-function: 0.1.+
-  palette-block-shortcut: 0.1.+
-  biome-provider-single: 0.1.+
+  biome-provider-pipeline: "1.+"
+  biome-provider-single: "1.+"
+  biome-provider-extrusion: "1.+"
+  chunk-generator-noise-3d: "1.+"
+  config-biome: "1.+"
+  config-flora: "1.+"
+  config-noise-function: "1.+"
+  config-ore: "1.+"
+  config-palette: "1.+"
+  config-distributors: "1.+"
+  config-locators: "1.+"
+  config-feature: "1.+"
+  structure-terrascript-loader: "1.+"
+  structure-sponge-loader: "1.+"
+  language-yaml: "1.+"
+  generation-stage-feature: "1.+"
+  structure-function-check-noise-3d: "1.+"
+  palette-block-shortcut: "1.+"
+  structure-block-shortcut: "1.+"
+  terrascript-function-sampler: "1.+"
 
 
 generator: NOISE_3D
